<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/menu_book"
        android:enabled="true"
        android:icon="@drawable/ic_menu_book_24"
        android:title="@string/book"/>

    <item
        android:id="@+id/menu_add"
        android:enabled="true"
        android:icon="@drawable/ic_menu_add_24"
        android:title="@string/add"/>

    <item
        android:id="@+id/menu_test"
        android:enabled="true"
        android:icon="@drawable/ic_menu_test_24"
        android:title="@string/test"/>

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_menu_profile_24"
        android:title="@string/profile"/>

</menu>